fixing unicode symbol on mobile

--- a/src/Layout/Navbar.module.css
+++ b/src/Layout/Navbar.module.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/yex5uch.css");
+
 /* NAVBAR */
 .navbar {
   display: flex;
@@ -80,10 +82,9 @@
 .navbarControl {
   position: absolute;
   margin-left: 23.2rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  unicode-range: U+00-FF;
+  font-family: "droid-sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .navbarControl button {
